# No-sisEngine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TASK_GRAPH.md  issues.json
noesis_engine/: __init__.py  settings.py
noesis_engine/adapters/audio/: pyannote_adapter.py  whisper_adapter.py
noesis_engine/adapters/llm/: local_client.py  openai_client.py
noesis_engine/api/: app.py
noesis_engine/api/routers/: analyze.py
noesis_engine/api/schemas/: http.py
noesis_engine/core/: axes.py  enums.py  persona_catalog.py  schemas.py
noesis_engine/ports/: diarization.py  llm.py  transcription.py
noesis_engine/prompts/: category_classification.py  claim_decomposition.py  persona_analysis.py  rejection_analysis.py
noesis_engine/services/: bridge_builder.py  category_classifier.py  claim_decomposer.py  decision_mapper.py  divergence_analyzer.py  issue_clusterer.py  persona_analyzer.py  persona_router.py  pipeline.py  rejected_value_evaluator.py  report_builder.py  speaker_segmenter.py  transcript_normalizer.py  vector_aggregator.py
noesis_engine/utils/: structured_output.py
tests/: test_api_analyze.py  test_axes.py  test_bridge_builder.py  test_decision_mapper.py  test_persona_catalog.py  test_persona_router.py  test_pipeline_transcript.py  test_structured_output.py  test_transcript_normalizer.py  test_vector_aggregator.py
