[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noesis-engine"
version = "0.1.0"
description = "NoesisEngine: transcript-first philosophical grammar analysis for multi-speaker decision contexts."
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "NoesisEngine Contributors" }
]
keywords = [
  "ai",
  "analysis",
  "fastapi",
  "llm",
  "philosophy",
  "transcript"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "typing-extensions>=4.12.0,<5.0.0"
]

[project.optional-dependencies]
audio = [
  "openai-whisper>=20240930",
  "pyannote.audio>=3.3.0,<4.0.0"
]
local = [
  "openai>=1.40.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[project.urls]
Homepage = "https://github.com/example/noesis-engine"
Repository = "https://github.com/example/noesis-engine"
Issues = "https://github.com/example/noesis-engine/issues"

[dependency-groups]
test = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0"
]
audio = [
  "openai-whisper>=20240930",
  "pyannote.audio>=3.3.0,<4.0.0"
]
local = [
  "openai>=1.40.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0"
]
dev = [
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "build>=1.2.0,<2.0.0",
  "twine>=5.1.0,<6.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["noesis_engine*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
